[package]
name = "bridge"
version = "0.1.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"

[lib]
crate-type =["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
deno_doc = "0.5.0"
futures = "0.3.15"
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
swc_ecmascript = "0.36.2"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
